...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
        appBar: DefaultAppBar(
          key: const Key('homeAppBar'),
        ),
        body: buildBody(),
        floatingActionButton: FloatingActionButton(
          key: const Key('searchButton'),
          onPressed: () {
            Modular.to.pushNamed(CatalogModule.movieSearchRoute);
          },
          child: const Icon(Icons.search),
        ));
  }
...
