...
  TextEditingController _searchController = TextEditingController();

  Widget buildSearchInput() {
    return Padding(
      padding: const EdgeInsets.symmetric(horizontal: 16),
      child: DefaultInputTextForm(
        key: const Key('searchInput'),
        controller: _searchController,
        margin: EdgeInsets.zero,
        onChanged: (value) => store.searchMoviesByQuery(value),
        label: S.current.searchLabel,
        hint: S.current.searchHintLabel,
        suffixIcon: Icons.search,
...
